# mp2

./: pyproject.toml
code/: __init__.py
code/config/: __init__.py  gemma3_270M.yaml
code/data/: __init__.py
code/model/: __init__.py
src/data/: utils.py
src/frontend/: html_generator.py  html_visualizer.py
src/utils/: code.py
